--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ name: Maximilien Jourdain's portfolio
 # Short bio or description (displayed in the header)
 description: Creative coder & technologist from Paris.
 
-preview-image: https://digitaslabs.github.io/assets/images/labs-logo-700.jpg
+preview-image: https://karolsenami.github.io/assets/images/me-background-shadow.png
 
 #
 # Flags below are optional
@@ -40,7 +40,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: 
+url:
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
