--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Maximilien Jourdain's portfolio
 
 # Short bio or description (displayed in the header)
-description: Creative coder & technologist from Paris.
+description: Creative coder & technologist from Paris. I develop installations, mobile apps, and video games using 3D or hardware.
 
 preview-image: https://karolsenami.github.io/assets/images/website_media.png
 
