--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ preview-image: https://karolsenami.github.io/assets/images/website_media.png
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: maximilien.jourdain+portfolio@gmail.com
+  email: maximilien.jourdain@gmail.com
   facebook:
   flickr:
   github: karolsenami
